# python-template

./: .gitignore  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/python_template/: __init__.py
tests/: __init__.py  test_hello.py
